# Checkers

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
docs/: Dockerfile
docs/design/_minted-index/: 1593413295FE83F3230E99FFF2DE79770A37CE8E382BF25BBAA68B61AED48E35.pygtex  A99C30172FCB2DFDE986A441CE712C380A37CE8E382BF25BBAA68B61AED48E35.pygtex
docs/final/: cases.tex  index.tex
docs/requirements/: description.tex  functional.tex  index.tex  non-functional.tex  ui.tex  use-cases.tex
docs/test-cases/: cases.tex  environment.tex  index.tex  introduction.tex  setup.tex
src/: board.rs  game.rs  main.rs  moves.rs  piece.rs  player.rs
src/networking/: client.rs  server.rs
